Update login and logged_out html

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,7 +38,7 @@
                             {% if request.user.is_authenticated %}
                                 <form action="{% url 'logout' %}" method="post" class="flex items-center">
                                     {% csrf_token %}
-                                    <button type="submit" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-red-600 dark:text-gray-200 dark:hover:text-white">Sign out</button>
+                                    <button type="submit" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</button>
                                 </form>
                             {% else %}
                                 <a href="{% url 'login' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign in</a>
