--- a/core/templates/courses/manage/course/delete.html
+++ b/core/templates/courses/manage/course/delete.html
@@ -9,14 +9,14 @@
     </h1>
 
     <div class="bg-white shadow-md rounded-lg p-6">
-        <form action="" method="post">
+        <form action="{% url 'course_delete' course.pk %}" method="post">
             {% csrf_token %}
             <div class="space-y-4">
                 <p class="text-lg text-gray-700">Are you sure you want to delete "{{ course }}"?</p>
             </div>
           <div class="mt-6 text-right">
                 <button type="submit" class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition duration-200">
-                    Delete Course
+                    Confirm
                 </button>
             </div> 
         </form>
