--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block title %}Log-in{% endblock %}
 
 {% block content %}
-<div class="w-96 mx-auto px-4">
+<div class="max-w-sm mx-auto px-4">
     <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-200 border-0 drop-shadow-md">
       <div class="rounded-t mb-0 px-6 py-6">
         <div class="text-center mb-3">
@@ -37,39 +37,45 @@
             {% csrf_token %}
           <input type="hidden" name="next" value="{{ next }}" />
 
-          <div class="space-y-6">
-            <div class="relative mb-4">
-              <label for="id_username" class="text-gray-800 text-sm mb-2 block">Username</label>
-              <div class="flex items-center border border-gray-200 rounded-md overflow-hidden">
-                <input id="id_username" name="username" type="text" class="text-gray-800 bg-white w-full text-sm px-4 py-3 outline-none" placeholder="Enter username" required>
-                <span class="px-3 text-gray-500"><i class="fas fa-user"></i></span>
-              </div>
-              {% if form.username.errors %}
+            <div class="mb-4">
+                <label for="id_username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
+                <div class="flex">
+                    <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-r-0 border-gray-300 rounded-l-md dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">
+                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z"/>
+                        </svg>
+                    </span>
+                    <input type="text" id="id_username" class="rounded-none rounded-r-lg bg-gray-50 border border-gray-300 text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-sm p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter username">
+                </div>
+                {% if form.username.errors %}
                 <p class="text-red-600 text-sm mt-1">{{ form.username.errors.0 }}</p>
-              {% endif %}
+                {% endif %}
             </div>
-            <div class="relative mb-4">
-              <label for="id_password" class="text-gray-800 text-sm mb-2 block">Password</label>
-              <div class="flex items-center border border-gray-200 rounded-md overflow-hidden">
-                <input id="id_password" name="password" type="password" class="text-gray-800 bg-white w-full text-sm px-4 py-3 outline-none" placeholder="Enter password" required>
-                <span class="px-3 text-gray-500"><i class="fas fa-lock"></i></span>
-              </div>
-              {% if form.password.errors %}
+
+            <div class="mb-4">
+                <label for="id_password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                <div class="flex">
+                    <span class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-r-0 border-gray-300 rounded-l-md dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">
+                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M10 3.5c-3.66 0-6.77 2.22-8.46 5.5 1.69 3.28 4.8 5.5 8.46 5.5s6.77-2.22 8.46-5.5c-1.69-3.28-4.8-5.5-8.46-5.5zm0 9.17a3.67 3.67 0 1 1 0-7.33 3.67 3.67 0 0 1 0 7.33zm0-6a2.33 2.33 0 1 0 0 4.67 2.33 2.33 0 0 0 0-4.67z"/>
+                        </svg>                                                      
+                    </span>
+                    <input id="id_password" name="password" type="password" class="rounded-none rounded-r-lg bg-gray-50 border border-gray-300 text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-sm p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="********">
+                </div>
+                {% if form.password.errors %}
                 <p class="text-red-600 text-sm mt-1">{{ form.password.errors.0 }}</p>
               {% endif %}
             </div>
-            <div class="flex items-center space-x-2">
-              <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-              <label for="remember-me" class="text-gray-800 ml-3 block text-sm">
-                I accept the <a href="#" class="text-blue-600 font-semibold hover:underline ml-1">Terms and Conditions</a>
-              </label>
-            </div>
-          </div>
 
-          <div class="mt-6">
-            <button type="submit" class="w-full py-3 px-4 text-sm tracking-wider font-semibold rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none">Sign in</button>
-          </div>
-          <p class="text-gray-800 text-sm mt-6 text-center">Don't have an account? <a href="#" class="text-blue-600 font-semibold hover:underline ml-1">Register here</a></p>
+            <div class="flex items-start mb-5">
+                <div class="flex items-center h-5">
+                  <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
+                </div>
+                <label for="remember" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">Remember me</label>
+            </div>
+              <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+           
+            <p class="text-gray-800 text-sm mt-6 text-center">Don't have an account? <a href="#" class="text-blue-600 font-semibold hover:underline ml-1">Register here</a></p>
         </form>
       </div>
     </div>
