Add sortable module and contents to drag and drop functionality

--- a/core/courses/templates/base.html
+++ b/core/courses/templates/base.html
@@ -81,6 +81,20 @@
         {% endblock %}
     </main>
 
+    
+   {% block  include_js %}
+
+   {% endblock  %}
+
+   <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // DOM Loaded
+            {% block domready %}
+
+            {% endblock %}
+        })
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
 </body>
 </html>
