Create students new app

--- a/core/courses/templates/courses/course/list.html
+++ b/core/courses/templates/courses/course/list.html
@@ -18,7 +18,7 @@
       {% endif %}
     </h1>
     <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-      <div class="col-span-1">
+      <div class="bg-gray-100 p-4 rounded-lg shadow-md col-span-1" style="width: 200px;">
         <h3 class="text-xl font-semibold mb-4">Subjects</h3>
         <ul id="modules" class="space-y-2">
           <li {% if not subject %} class="font-bold text-blue-600"{% else %}class="text-gray-700"{% endif %}>
