--- a/core/students/templates/students/student/registration.html
+++ b/core/students/templates/students/student/registration.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+ sign up 
+{% endblock  %}
+
 {% block content %}
 <div class="bg-gray-100 dark:bg-gray-900 py-8">
     <div class="max-w-md mx-auto bg-white dark:bg-gray-800 shadow-lg rounded-lg p-8 space-y-6">
