--- a/core/courses/templates/courses/course/list.html
+++ b/core/courses/templates/courses/course/list.html
@@ -9,53 +9,55 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">
-      {% if subject %}
-        {{ subject.title }} courses
-      {% else %}
-        All courses
-      {% endif %}
-    </h1>
-    <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-      <div class="bg-gray-100 p-4 rounded-lg shadow-md col-span-1" style="width: 200px;">
-        <h3 class="text-xl font-semibold mb-4">Subjects</h3>
-        <ul id="modules" class="space-y-2">
-          <li {% if not subject %} class="font-bold text-blue-600"{% else %}class="text-gray-700"{% endif %}>
-            <a href="{% url "course_list" %}" class="hover:underline">All</a>
+  <div class="min-h-screen flex flex-col lg:flex-row">
+    <!-- Sidebar -->
+    <div class="w-full lg:w-96 bg-gray-300 text-gray-800 p-6 rounded-lg shadow-md lg:h-screen lg:sticky lg:top-0">
+      <h3 class="text-xl font-semibold mb-4">Subjects</h3>
+      <ul id="subjects" class="space-y-2">
+        <li {% if not subject %}class="font-bold text-blue-800 p-4 bg-gray-400 rounded-lg hover:bg-gray-500"{% else %}class="text-gray-900 p-4 bg-gray-400 rounded-lg hover:bg-gray-500"{% endif %}>
+          <a href="{% url 'course_list' %}" class="block text-lg font-medium {% if not subject %}text-gray-900{% endif %}">All</a>
+        </li>
+        {% for sbj in subjects %}
+          <li {% if subject == sbj %}class="font-bold text-blue-800 p-4 bg-gray-500 rounded-lg hover:bg-gray-500"{% else %}class="text-gray-900 p-4 bg-gray-400 rounded-lg hover:bg-gray-500"{% endif %}>
+            <a href="{% url 'course_list_subject' sbj.slug %}" class="block text-lg font-medium {% if subject == sbj %}text-gray-900{% endif %}">
+              {{ sbj.title }}
+              <br>
+              <span class="text-sm {% if subject == sbj %}text-gray-800{% else %}text-gray-700{% endif %}">
+                {{ sbj.total_courses }} course{{ sbj.total_courses|pluralize }}
+              </span>
+            </a>
           </li>
-          {% for sbj in subjects %}
-            <li {% if subject == sbj %}class="font-bold text-blue-600"{% else %}class="text-gray-700"{% endif %}>
-              <a href="{% url "course_list_subject" sbj.slug %}" class="hover:underline">
-                {{ sbj.title }}
-                <br>
-                <span class="text-sm text-gray-500">
-                  {{ sbj.total_courses }} course{{ sbj.total_courses|pluralize }}
-                </span>
-              </a> 
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="col-span-3">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-          {% for course in courses %}
-            <div class="bg-white p-6 rounded-lg shadow-md">
-              {% with subject=course.subject %}
-                <h3 class="text-xl font-semibold mb-2">
-                  <a href="{% url 'course_detail' course.slug %}" class="hover:underline text-blue-600">
-                    {{ course.title }}
-                  </a>
-                </h3> 
-                <p class="text-gray-700">
-                  <a href="{% url "course_list_subject" subject.slug %}" class="text-gray-500 hover:underline">{{ subject }}</a>.
-                  {{ course.total_modules }} modules.
-                  Instructor: {{ course.owner.get_full_name }}
-                </p>
-              {% endwith %}
-            </div>
-          {% endfor %}
-        </div>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <!-- Main content -->
+    <div class="w-full lg:flex-1 p-8 overflow-y-auto lg:h-[calc(100vh-6rem)]">
+      <h1 class="text-2xl font-bold text-center mb-6 bg-gray-200 p-4 rounded-lg hover:bg-gray-300">
+        {% if subject %}
+          {{ subject.title }} courses
+        {% else %}
+          All courses
+        {% endif %}
+      </h1>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        {% for course in courses %}
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            {% with subject=course.subject %}
+              <h3 class="text-xl font-semibold mb-2">
+                <a href="{% url 'course_detail' course.slug %}" class="hover:underline text-blue-800">{{ course.title }}</a>
+              </h3>
+              <p class="text-gray-900">
+                <a href="{% url 'course_list_subject' subject.slug %}" class="text-gray-800 hover:underline">{{ subject }}</a>.
+                {{ course.total_modules }} modules.
+            </p>
+            <p class="text-gray-900">
+                Instructor: {{ course.owner.get_full_name }}
+            </p>
+            {% endwith %}
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
